<resources>
    <string name="app_name">GitU</string>
    <string name="count_item">Results</string>
    <string name="user_username">Username</string>
    <string name="user_user_name">Name</string>
    <string name="user_avatar">Avatar</string>
    <string name="user_following">Following</string>
    <string name="user_followers">Followers</string>
    <string name="user_followerscount">0</string>
    <string name="user_followingcount">0</string>
    <string name="search">Cari</string>
    <string name="search_hint">Masukkan nama yang dicari</string>

    <string name="content_tab">This is Tab %1$d</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>